# Computer-Graphics-Tanning-Project

./: README.txt
COMP308_FinalProject/res/assets/: test.asf
COMP308_FinalProject/res/shaders/: mapper.frag  mapper.vert  modelRenderer.frag  modelRenderer.vert  pingPong.frag  pingPong.vert  shadowShader.frag  shadowShader.vert  shadowShaderScene.frag  shadowShaderScene.vert  simpleShader.frag  simpleShader.vert  skinnedModelRenderer.frag  skinnedModelRenderer.vert  test.frag  test.vert  textureOnQuad.frag  textureOnQuad.vert  texturedModelRenderer.frag  texturedModelRenderer.vert
COMP308_FinalProject/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  ModelSkinned.cpp  ModelSkinned.hpp  main.cpp  skeleton.cpp  skeleton.hpp
